# TempoLink

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
Cpp/: CMakeLists.txt
Cpp/Client/Installer/: TempoLink.iss
Cpp/Client/JuceApp/: CMakeLists.txt
Cpp/Client/JuceApp/cmake/: TempolinkCommon.cmake  TempolinkInstall.cmake  TempolinkJuceClientSources.cmake  TempolinkJuceDeps.cmake  TempolinkPackaging.cmake  TempolinkTargetSettings.cmake  TempolinkVstBridgeSources.cmake
Cpp/Client/JuceApp/include/tempolink/audio/: AudioCodecFactory.h  AudioDevice.h  AudioInputFactory.h  AudioOutputFactory.h  IAudioCodec.h  IAudioInputDevice.h  OpusCodec.h
Cpp/Client/JuceApp/include/tempolink/config/: AudioConstants.h
Cpp/Client/JuceApp/include/tempolink/juce/: MainComponent.h
Cpp/Client/JuceApp/include/tempolink/juce/app/: AppStatusContext.h  ClientAppCallbackFactory.h  ClientAppPresenter.h  ControllerCompositionFactory.h  LobbyBindings.h  ParticipantRosterBuilder.h  RoomCatalog.h  RoomCommandController.h  SessionBindings.h  (+1 more)
Cpp/Client/JuceApp/include/tempolink/net/: Packet.h  PacketCodec.h
Cpp/Client/JuceApp/src/: AppMain.cpp  MainComponent.cpp
Cpp/Client/JuceApp/src/app/: ClientAppCallbackFactory.cpp  ClientAppPresenter.LobbyBindings.cpp  ClientAppPresenter.LoginBindings.cpp  ClientAppPresenter.SessionBindings.cpp  ClientAppPresenter.UtilityBindings.cpp  ClientAppPresenter.cpp  ControllerCompositionFactory.cpp  LobbyBindings.cpp  ParticipantRosterBuilder.cpp  RoomCatalog.cpp  RoomCommandController.cpp  SessionBindings.cpp  SessionModelSupport.cpp
Cpp/Client/JuceApp/src/app/auth/: AuthController.cpp
Cpp/Client/JuceApp/src/app/content/: ContentController.cpp
Cpp/Client/JuceApp/src/app/lobby/: LobbyDataController.cpp
Cpp/Client/JuceApp/src/app/navigation/: ScreenNavigator.cpp
Cpp/Client/JuceApp/src/app/session/: SessionLifecycleController.cpp  SessionPresenceController.cpp
Cpp/Client/JuceApp/src/async/: AsyncTaskRunner.cpp
Cpp/Client/JuceApp/src/bridge/: AudioFilePlayer.cpp  AudioRecorder.cpp  AudioSessionService.cpp  SessionMediaBridgePort.cpp  UdpAudioBridgePort.cpp
Cpp/Client/JuceApp/src/common/audio/: NullAudioCodec.cpp  OpusCodec.cpp
Cpp/Client/JuceApp/src/common/bridge/: UdpBridgeProtocol.cpp
Cpp/Client/JuceApp/src/common/net/: PacketCodec.cpp  UdpSocket_posix.cpp
Cpp/Client/JuceApp/src/config/: ClientEnvConfig.cpp
Cpp/Client/JuceApp/src/logging/: AppLogger.cpp
Cpp/Client/JuceApp/src/network/: IceConfigClient.cpp  RoomApiClient.cpp  SignalingClient.cpp
Cpp/Client/JuceApp/src/network/auth/: AuthApiClient.cpp  OAuthCallbackServer.cpp
Cpp/Client/JuceApp/src/network/ice/: IceConfigClient.cpp  IceConfigJsonMapper.cpp
Cpp/Client/JuceApp/src/network/signaling/: SignalingClient.cpp  SignalingEventParser.cpp
Cpp/Client/JuceApp/src/network/transport/: JuceWebSocketTransport.cpp  PlainSocketStream.cpp  PlainWebSocketTransport.cpp  SocketStream.cpp  TlsSocketStream.cpp  TlsWebSocketTransport.cpp  WebSocketFrameCodec.cpp  WebSocketHandshake.cpp
Cpp/Client/JuceApp/src/style/: TempoLinkLookAndFeel.cpp  ThemeManager.cpp
Cpp/Client/JuceApp/src/ui/: LobbyView.cpp  ParticipantStripComponent.cpp  RoomCardComponent.cpp  RoomEntrySettingsView.cpp  SessionView.cpp
Cpp/Client/JuceApp/src/ui/common/: ConnectionBadge.cpp  LevelMeterComponent.cpp  MetricLabel.cpp  PanelCard.cpp
Cpp/Client/JuceApp/src/ui/components/: ChatPanel.cpp  ParticipantStripComponent.cpp  RoomCardComponent.cpp
Cpp/Client/JuceApp/src/ui/screens/: LobbyView.cpp  LoginView.cpp  ManualView.cpp  MyRoomsView.cpp  NewsView.cpp  ProfileView.cpp  QnaView.cpp  RoomEntrySettingsView.cpp  SessionView.cpp  SettingsView.cpp  UsersView.cpp
Cpp/Client/JuceApp/src/ui/session/: MainOutPanel.cpp  MyInputPanel.cpp  TopStatusBar.cpp
Cpp/Client/JuceApp/src/vstbridge/: VstBridgeAudioProcessor.cpp
Cpp/Client/RealtimeCore/: CMakeLists.txt
Cpp/Client/RealtimeCore/include/tempolink/client/: AudioBridgePort.h  AudioPipeline.h  ClientSession.h  ClientTransport.h  ClockSyncTracker.h  EndpointManager.h  PeerJitterBuffer.h
Cpp/Client/RealtimeCore/src/: main_console.cpp
Cpp/Client/RealtimeCore/src/client/: AudioPipeline.cpp  ClientSession.cpp  ClientTransport.cpp  ClockSyncTracker.cpp  EndpointManager.cpp  PeerJitterBuffer.cpp
Cpp/Client/RealtimeCore/src/client/audio/: AudioDeviceManager.cpp  AudioProcessorChain.cpp  InputGainProcessor.cpp  LevelMeter.cpp  MetronomeProcessor.cpp  MultiStreamMixer.cpp  ReverbProcessor.cpp
Cpp/Client/RealtimeCore/src/client/codec/: OpusCodec.cpp
Cpp/Server/: CMakeLists.txt
Cpp/Server/include/tempolink/server/: ClockSyncService.h  RoomRegistry.h  UdpRelayServer.h
Cpp/Server/src/: main.cpp
Cpp/Server/src/server/: ClockSyncService.cpp  RoomRegistry.cpp  UdpRelayServer.cpp
Cpp/Shared/: CMakeLists.txt
Cpp/Shared/include/tempolink/audio/: AudioCodecFactory.h  IAudioCodec.h  IAudioInputDevice.h  IAudioOutputDevice.h  NullAudioCodec.h  OpusCodec.h
Cpp/Shared/include/tempolink/bridge/: UdpBridgeProtocol.h
Cpp/Shared/include/tempolink/config/: NetworkConstants.h  TestRoomConstants.h
Cpp/Shared/include/tempolink/net/: Packet.h  PacketCodec.h  UdpSocket.h
Cpp/Shared/include/tempolink/util/: StandardThread.h
Cpp/Shared/src/audio/: AudioCodecFactory.cpp  NullAudioCodec.cpp  OpusCodec.cpp
Cpp/Shared/src/audio/factory/: AudioInputFactoryGeneric.cpp  AudioInputFactoryMacOS.cpp  AudioInputFactoryWindows.cpp  AudioOutputFactoryGeneric.cpp  AudioOutputFactoryLinux.cpp  AudioOutputFactoryWindows.cpp
Cpp/Shared/src/audio/platform/generic/: NullAudioInputDevice.cpp  NullAudioOutputDevice.cpp
Cpp/Shared/src/audio/platform/linux/: ALSAAudioInputDevice.cpp  ALSAAudioOutputDevice.cpp
Cpp/Shared/src/audio/platform/macos/: CoreAudioDeviceEnumerator.cpp  CoreAudioInputDevice.cpp  CoreAudioOutputDevice.cpp
Cpp/Shared/src/audio/platform/windows/: WASAPIAudioInputDevice.cpp  WASAPIAudioOutputDevice.cpp  WASAPIDeviceEnumerator.cpp
Cpp/Shared/src/net/: PacketCodec.cpp  UdpSocket.cpp  UdpSocket_win.cpp
Cpp/cmake/: FindOpus.cmake
(+214 files in other folders)
